made footer overflow hidden to prevent side scrolling

--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ main {
 footer {
     position: relative;
     min-height: 200px;
+    width: 100vw;
+    overflow: hidden;
 }
 
 h1 {
